<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Simple Calculator "
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name : Nabila Istighfareta"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NIM : 2023010034"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_1"
        android:textStyle="bold"
        android:textSize="14sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="Enter Number"
        android:id="@+id/number1"
        android:lines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/number2"
        android:inputType="numberDecimal"
        android:hint="Enter Number"
        android:lines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:id="@+id/plus"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:id="@+id/multiply" />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:id="@+id/divide"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textStyle="bold"/>

</LinearLayout>